// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > renders consistently across themes (snapshot) 1`] = `
<button
  aria-disabled="false"
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-blue-600 text-white hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600 h-10 px-4 py-2"
  type="button"
>
  Snapshot Button
</button>
`;

exports[`Button > renders consistently with different variants (snapshot) > button-outline 1`] = `
<button
  aria-disabled="false"
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-gray-300 bg-transparent hover:bg-gray-50 dark:border-gray-600 dark:hover:bg-gray-800 h-10 px-4 py-2"
  type="button"
>
  Outline
</button>
`;

exports[`Button > renders consistently with different variants (snapshot) > button-primary 1`] = `
<button
  aria-disabled="false"
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-blue-600 text-white hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600 h-10 px-4 py-2"
  type="button"
>
  Primary
</button>
`;

exports[`Button > renders consistently with different variants (snapshot) > button-secondary 1`] = `
<button
  aria-disabled="false"
  class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-gray-100 text-gray-900 hover:bg-gray-200 dark:bg-gray-700 dark:text-gray-100 dark:hover:bg-gray-600 h-10 px-4 py-2"
  type="button"
>
  Secondary
</button>
`;
